welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:12: error: not found: value vuBiscuit
  return vuBiscuit
         ^