welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  for (i <- 1 to 6) {
  	var vuBiscuit:Boolean = false
  	for (compteur <- 1 to 6) {
    	if (estSurBiscuit) {
      	vuBiscuit = true
    	}
    	avance()
  	}
  	recule()
	}
  return vuBiscuit
}